fixed css for navbar collapse

--- a/public/stylesheets/base.sass
+++ b/public/stylesheets/base.sass
@@ -17,3 +17,17 @@ a
   transition: all .1s linear
   background-color: #4285f4
   box-shadow: 0 5px 11px 0 rgba(0,0,0,.18), 0 4px 15px 0 rgba(0,0,0,.15)
+
+#user-dropdown:hover
+  box-shadow: 0 5px 15px 0 rgba(0,0,0,.18), 0 5px 15px 0 rgba(0,0,0,.15)
+  border-radius: 25px
+
+#user-icon
+  float: right
+  position: absolute
+  right: 26px
+  top: 13px
+
+@media (max-width: 991px)
+  #user-icon
+    top: 18px
